--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:layout_width="88dp"
         android:layout_height="73dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="Small Logo"
+        android:contentDescription="@string/small_logo_description"
         android:scaleType="centerInside"
         android:src="@drawable/logo_small"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +30,9 @@
         android:layout_height="57dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/league_spartan_medium"
-        android:text="Criar nova conta"
+        android:text="@string/create_account_title"
         android:textColor="#CC0676"
-        android:textSize="35dp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.246"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Nome"
+        android:hint="@string/create_account_nome_hint"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColorHint="#80999999"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Apelido"
+        android:hint="@string/create_account_ultimo_nome_hint"
         android:inputType="textPersonName"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -88,7 +88,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Digita o email"
+        android:hint="@string/create_account_email_hint"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColorHint="#80999999"
@@ -108,7 +108,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Password"
+        android:hint="@string/create_account_password_hint"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -128,7 +128,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Confirme a password"
+        android:hint="@string/create_account_confirm_password_hint"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -148,7 +148,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Cargo"
+        android:hint="@string/create_account_cargo_hint"
         android:inputType="textPersonName"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -170,11 +170,11 @@
         android:fontFamily="@font/league_spartan_medium"
         android:paddingTop="0dp"
         android:paddingBottom="5dp"
-        android:text="Registar"
+        android:text="@string/create_account_button_text"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorLink="#5E48ED53"
-        android:textSize="22dp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
