--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,7 @@
     android:id="@+id/splashScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background_image"
-    tools:context=".MainActivity">
+    android:background="@drawable/login_background_image">
 
     <!-- Logo Image -->
     <ImageView
