--- a/app/src/main/res/layout/activity_profiles.xml
+++ b/app/src/main/res/layout/activity_profiles.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/profile_background_image"
-    tools:context=".Splash_ScreenActivity">
+    android:background="@drawable/profile_background_image">
 
     <!-- Logo Image -->
     <ImageView
