--- a/app/src/main/res/layout/item_card_view.xml
+++ b/app/src/main/res/layout/item_card_view.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-
+        android:layout_width="165dp"
+        android:layout_height="165dp"
         android:background="@android:color/white"
         app:cardCornerRadius="40dp"
         app:cardElevation="6dp"
         app:layout_constraintEnd_toEndOf="parent"
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_percent="0.45">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="4dp"/>
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="115dp"
+            android:layout_height="115dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_default_image"
+            android:background="@drawable/circular_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/profile_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="4dp">
-
-            <ImageView
-                android:layout_width="115dp"
-                android:layout_height="115dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/profile_default_image"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:fontFamily="@font/league_spartan_medium"
-                android:text="Name Surname"
-                android:textColor="#CB3086"
-                android:textSize="18sp"/>
-        </LinearLayout>
+            android:layout_marginStart="15dp"
+            android:fontFamily="@font/league_spartan_medium"
+            android:text="@string/name_surname"
+            android:textColor="#CB3086"
+            android:textSize="19sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="125dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_image" />
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
