--- a/app/src/main/res/layout/item_card_view.xml
+++ b/app/src/main/res/layout/item_card_view.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -10,6 +10,7 @@
         android:layout_height="165dp"
         android:background="@android:color/white"
         app:cardCornerRadius="40dp"
+        android:layout_margin="8dp"
         app:cardElevation="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
