--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -18,7 +18,7 @@
         android:contentDescription="Small Logo"
         android:scaleType="centerInside"
         android:src="@drawable/logo_small"
-        app:layout_constraintEnd_toEndf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,7 +67,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Apelido"
+        android:hint="@string/apelido"
         android:inputType="textPersonName"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -107,7 +107,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Password"
+        android:hint="@string/password_"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -147,7 +147,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:fontFamily="@font/league_spartan_medium"
-        android:hint="Cargo"
+        android:hint="@string/cargo"
         android:inputType="textPersonName"
         android:padding="12dp"
         android:textColorHint="#80999999"
@@ -169,15 +169,14 @@
         android:fontFamily="@font/league_spartan_medium"
         android:paddingTop="0dp"
         android:paddingBottom="5dp"
-        android:text="Registar"
+        android:text="@string/registar"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorLink="#5E48ED53"
-        android:textSize="22dp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/jobInput" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
