--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <ImageView
+        android:id="@+id/icon_menu"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="User Photo"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <!-- User Name -->
     <TextView
         android:id="@+id/user_name"
@@ -48,20 +60,6 @@
         app:layout_constraintTop_toBottomOf="@id/user_name"/>
 
     <!-- Edit Profile Button -->
-    <Button
-        android:id="@+id/button_edit_profile"
-        android:layout_width="125dp"
-        android:layout_height="47dp"
-        android:backgroundTint="#EFEBEB"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/editar_perfil"
-        android:textColor="#CB3086"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="#25183E"
-        app:strokeWidth="3px"
-        app:layout_constraintTop_toBottomOf="@id/job_name" />
 
     <!-- CardView received and given feedbacks -->
     <androidx.cardview.widget.CardView
