--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,8 +59,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_name"/>
 
-    <!-- Edit Profile Button -->
-
     <!-- CardView received and given feedbacks -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_feedbacks"
@@ -190,8 +188,7 @@
                     android:id="@+id/one_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:layout_marginStart="55dp"
+                    android:layout_marginStart="60dp"
                     android:contentDescription="@string/stars_icon"
                     android:src="@drawable/one_stars_profile_card"/>
             </LinearLayout>
@@ -202,7 +199,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                tools:ignore="ExtraText">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -218,10 +216,9 @@
                     android:id="@+id/two_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
+                    android:layout_marginStart="20dp"
                     android:contentDescription="@string/stars_icon_"
-                    android:src="@drawable/two_stars_profile_card"
-                    android:layout_marginStart="15dp"/>/>
+                    android:src="@drawable/two_stars_profile_card"/>
             </LinearLayout>
 
             <!-- Commitment Section -->
@@ -240,20 +237,18 @@
                     android:text="@string/compromisso"
                     android:textColor="#25183E"
                     android:layout_marginBottom="7dp"
-
                     android:textSize="27sp" />
 
                 <ImageView
                     android:id="@+id/three_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:contentDescription="@string/stars_icon__"
-                    android:src="@drawable/three_stars_profile_card"
-                    android:layout_marginStart="5dp"/>/>
+                    android:layout_marginStart="10dp"
+                    android:contentDescription="@string/stars_icon"
+                    android:src="@drawable/three_stars_profile_card"/>
             </LinearLayout>
 
-            <!-- Communication Section -->
+            <!-- Capacity Section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -266,20 +261,29 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:fontFamily="@font/league_spartan_medium"
-                    android:text="@string/comunica_o"
+                    android:text="@string/capacidade"
                     android:textColor="#25183E"
-                    android:textSize="27sp"
-                    android:layout_marginBottom="7dp"/>
+                    android:layout_marginBottom="7dp"
+                    android:textSize="27sp" />
 
                 <ImageView
                     android:id="@+id/four_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:contentDescription="@string/stars_icon___"
-                    android:src="@drawable/four_stars_profile_card"
-                    android:layout_marginStart="8dp"/>
+                    android:layout_marginStart="30dp"
+                    android:contentDescription="@string/stars_icon"
+                    android:src="@drawable/four_stars_profile_card"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <!-- FrameLayout for fragment_menu -->
+    <FrameLayout
+        android:id="@+id/fragment_menu_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/icon_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
