--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -117,11 +117,11 @@
         android:fontFamily="@font/league_spartan_medium"
         android:paddingTop="0dp"
         android:paddingBottom="5dp"
-        android:text="Login"
+        android:text="@string/login"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorLink="#5E48ED53"
-        android:textSize="22dp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="132dp"
         android:fontFamily="@font/league_spartan_medium"
-        android:text="Not registered yet? Create Account"
+        android:text="@string/not_registered_yet_create_account"
         android:textColor="#25183E"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
