--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/splashScreen"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background_image">
+    android:fillViewport="true">
 
-    <!-- Logo Image -->
-    <ImageView
-        android:id="@+id/logoSmall"
-        android:layout_width="88dp"
-        android:layout_height="73dp"
-        android:contentDescription="@string/small_logo"
-        android:scaleType="centerInside"
-        android:src="@drawable/logo_small"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/splashScreen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_profile_backgroud">
+
+        <!-- Logo Image -->
+        <ImageView
+            android:id="@+id/logoSmall"
+            android:layout_width="88dp"
+            android:layout_height="73dp"
+            android:contentDescription="@string/small_logo"
+            android:scaleType="centerInside"
+            android:src="@drawable/logo_small"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <FrameLayout
         android:id="@+id/photo_frame"
@@ -85,9 +90,11 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:inputType="textEmailAddress"
+        android:text="juan@cesae.com"
+        android:fontFamily="@font/league_spartan_medium"
         android:padding="12dp"
         android:textColorHint="#80999999"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailLabel"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -129,8 +136,10 @@
         android:background="@drawable/rounded_input_background"
         android:inputType="textPersonName"
         android:padding="12dp"
+        android:text="Formador"
+        android:fontFamily="@font/league_spartan_medium"
         android:textColorHint="#80999999"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/jobLabel"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -162,22 +171,131 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editJobButton" />
 
-    <!-- Password Input Field -->
-    <EditText
-        android:id="@+id/passwordInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/rounded_input_background"
-        android:inputType="textPassword"
-        android:padding="12dp"
-        android:textColorHint="#80999999"
-        android:textSize="21sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <!-- Password Input Field -->
+        <EditText
+            android:id="@+id/passwordInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/rounded_input_background"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:textColorHint="#80999999"
+            android:textSize="21sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- Password Label -->
+        <TextView
+            android:id="@+id/newpasswordLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nova_password"
+            android:fontFamily="@font/league_spartan_medium"
+            android:layout_marginStart="32dp"
+            android:textColor="#80999999"
+            android:textSize="21sp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/passwordInput" />
+
+        <!-- Password Input Field -->
+        <EditText
+            android:id="@+id/newPasswordInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/rounded_input_background"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:textColorHint="#80999999"
+            android:textSize="21sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newpasswordLabel"
+            app:layout_constraintEnd_toEndOf="parent" />
+<!--        <Button-->
+<!--            android:id="@+id/editNewPassword"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/league_spartan_medium"-->
+<!--            android:textSize="18sp"-->
+<!--            android:text="@string/editar_"-->
+<!--            android:textColor="#CB3086"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            app:layout_constraintHorizontal_bias="0.9"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/newPasswordInput"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent" />-->
+
+        <TextView
+            android:id="@+id/newPasswordConfirmationLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirmar password"
+            android:fontFamily="@font/league_spartan_medium"
+            android:layout_marginStart="32dp"
+            android:textColor="#80999999"
+            android:textSize="21sp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newPasswordInput" />
+
+        <EditText
+            android:id="@+id/newPasswordConfirmationInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/rounded_input_background"
+            android:inputType="textPassword"
+            android:padding="12dp"
+            android:textColorHint="#80999999"
+            android:textSize="21sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newPasswordConfirmationLabel"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+<!--        <Button-->
+<!--            android:id="@+id/editNewPasswordConfirmation"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/league_spartan_medium"-->
+<!--            android:textSize="18sp"-->
+<!--            android:text="@string/editar_"-->
+<!--            android:textColor="#CB3086"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            app:layout_constraintHorizontal_bias="0.9"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/newPasswordConfirmationInput"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"/>-->
 
 
+        <Button
+            android:id="@+id/saveEditProfileButton"
+            android:layout_width="344dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/league_spartan_medium"
+            android:text="@string/salvar_altera_es"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/button_with_shadow"
+            android:textColorLink="#5E48ED53"
+            android:textSize="22sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newPasswordConfirmationInput"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
