--- a/app/src/main/res/layout/fragment_add_user_review.xml
+++ b/app/src/main/res/layout/fragment_add_user_review.xml
@@ -55,7 +55,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
-            android:stepSize="1.0" />
+            android:stepSize="1.0"
+            android:progressTint="@color/yellow_star"/>
+
 
         <!-- Field 2: Conhecimento -->
         <TextView
@@ -70,7 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
-            android:stepSize="1.0" />
+            android:stepSize="1.0"
+            android:progressTint="@color/yellow_star"/>
 
         <!-- Field 3: Colaboração -->
         <TextView
@@ -85,7 +88,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
-            android:stepSize="1.0" />
+            android:stepSize="1.0"
+            android:progressTint="@color/yellow_star"/>
 
         <!-- Field 4: Responsabilidade -->
         <TextView
@@ -100,7 +104,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
-            android:stepSize="1.0" />
+            android:stepSize="1.0"
+            android:progressTint="@color/yellow_star"/>
     </LinearLayout>
 
     <!-- Submit Button -->
