--- a/app/src/main/res/layout/fragment_profile_admin.xml
+++ b/app/src/main/res/layout/fragment_profile_admin.xml
@@ -72,7 +72,7 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="233dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -160,7 +160,7 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="433dp"
+        android:layout_marginTop="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -169,8 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="290dp"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:paddingBottom="20dp">
+            android:padding="16dp">
 
             <!-- Initiative Section -->
             <LinearLayout
