--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -33,8 +33,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <!-- User Name -->
-
     <!-- Job Name -->
     <TextView
         android:id="@+id/user_name"
@@ -69,7 +67,7 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="233dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -138,7 +136,7 @@
         android:id="@+id/average_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/m_dia_pessoal"
         android:textColor="#CB3086"
@@ -156,16 +154,17 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="433dp"
+        android:layout_marginTop="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="290dp"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:paddingBottom="20dp">
 
             <!-- Initiative Section -->
             <LinearLayout
