--- a/app/src/main/res/layout/fragment_profile_admin.xml
+++ b/app/src/main/res/layout/fragment_profile_admin.xml
@@ -21,6 +21,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/icon_menu"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="@string/icon_menu"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <!-- User Name -->
     <TextView
         android:id="@+id/user_name"
@@ -49,41 +61,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_name"/>
 
-    <!-- Edit Profile Button -->
-    <Button
-        android:id="@+id/button_edit_profile"
-        android:layout_width="125dp"
-        android:layout_height="47dp"
-        android:backgroundTint="#EFEBEB"
-        android:layout_marginLeft="60dp"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/editar_perfil_dashboard_profile"
-        android:textColor="#CB3086"
-        android:textSize="15sp"
-        app:strokeColor="#25183E"
-        app:strokeWidth="3px"
-        app:layout_constraintEnd_toStartOf="@+id/button_dashboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/job_name"
-        app:layout_constraintWidth_percent="0.4" />
 
-    <!-- Dashboard Button -->
-    <Button
-        android:id="@+id/button_dashboard"
-        android:layout_width="125dp"
-        android:layout_height="47dp"
-        android:backgroundTint="#EFEBEB"
-        android:layout_marginRight="60dp"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/dashboard"
-        android:textColor="#CB3086"
-        android:textSize="15sp"
-        app:strokeColor="#25183E"
-        app:strokeWidth="3px"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button_edit_profile"
-        app:layout_constraintTop_toBottomOf="@id/job_name"
-        app:layout_constraintWidth_percent="0.4"/>
+
 
     <!-- CardView received and given feedbacks -->
     <androidx.cardview.widget.CardView
@@ -93,7 +72,7 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="233dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -162,7 +141,7 @@
         android:id="@+id/average_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="180dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/m_dia_pessoal_dashboard"
@@ -181,14 +160,14 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="433dp"
+        android:layout_marginTop="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="290dp"
             android:orientation="vertical"
             android:padding="16dp">
 
