--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -13,7 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="4dp"
-        android:contentDescription="User Photo"
+        android:contentDescription="@string/user_photo__"
         android:scaleType="centerCrop"
         android:src="@drawable/profile_default_image"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <!-- User Name -->
+    <ImageView
+        android:id="@+id/icon_menu"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="@string/user_photo_"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <!-- Job Name -->
     <TextView
@@ -29,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/league_spartan_medium"
-        android:text="Joana"
+        android:text="@string/joana"
         android:textColor="#CB3086"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,28 +52,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/league_spartan_medium"
-        android:text="Formadora"
+        android:text="@string/formadora"
         android:textColor="#25183E"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_name"/>
-
-    <!-- Edit Profile Button -->
-    <Button
-        android:id="@+id/button_edit_profile"
-        android:layout_width="125dp"
-        android:layout_height="47dp"
-        android:backgroundTint="#EFEBEB"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/editar_perfil"
-        android:textColor="#CB3086"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="#25183E"
-        app:strokeWidth="3px"
-        app:layout_constraintTop_toBottomOf="@id/job_name" />
 
     <!-- CardView received and given feedbacks -->
     <androidx.cardview.widget.CardView
@@ -73,7 +67,7 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="233dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -95,14 +89,14 @@
                     android:id="@+id/icon_feedback_received"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:contentDescription="Feedback received icon"
+                    android:contentDescription="@string/feedback_received_icon"
                     android:src="@drawable/icon_profile_feedback_received"/>
 
                 <TextView
                     android:id="@+id/text_profile_feedback_received"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="22dp"
+                    android:layout_marginStart="22dp"
                     android:fontFamily="@font/league_spartan_medium"
                     android:text="@string/feedbacks_recebidos"
                     android:textColor="#25183E"
@@ -121,14 +115,14 @@
                     android:id="@+id/icon_feedback_given"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:contentDescription="Feedback given icon"
+                    android:contentDescription="@string/feedback_given_icon"
                     android:src="@drawable/icon_profile_feedback_given"/>
 
                 <TextView
                     android:id="@+id/text_profile_feedback_given"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="22dp"
+                    android:layout_marginStart="22dp"
                     android:fontFamily="@font/league_spartan_medium"
                     android:text="@string/feedbacks_efetuados"
                     android:textColor="#25183E"
@@ -142,7 +136,7 @@
         android:id="@+id/average_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/m_dia_pessoal"
         android:textColor="#CB3086"
@@ -160,16 +154,17 @@
         app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
         app:cardCornerRadius="26dp"
-        android:layout_marginTop="433dp"
+        android:layout_marginTop="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="290dp"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:paddingBottom="20dp">
 
             <!-- Initiative Section -->
             <LinearLayout
@@ -177,12 +172,13 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:layout_marginTop="12dp">
+                android:layout_marginTop="12dp"
+                tools:ignore="UseCompoundDrawables">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/league_spartan_medium"
                     android:text="@string/iniciativa"
                     android:textColor="#25183E"
@@ -193,9 +189,8 @@
                     android:id="@+id/one_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:layout_marginLeft="55dp"
-                    android:contentDescription="stars icon"
+                    android:layout_marginStart="60dp"
+                    android:contentDescription="@string/stars_icon"
                     android:src="@drawable/one_stars_profile_card"/>
             </LinearLayout>
 
@@ -205,12 +200,13 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                tools:ignore="ExtraText">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/league_spartan_medium"
                     android:text="@string/colabora_o"
                     android:textColor="#25183E"
@@ -221,10 +217,9 @@
                     android:id="@+id/two_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:contentDescription="stars icon"
-                    android:src="@drawable/two_stars_profile_card"
-                    android:layout_marginLeft="15dp"/>/>
+                    android:layout_marginStart="20dp"
+                    android:contentDescription="@string/stars_icon_"
+                    android:src="@drawable/two_stars_profile_card"/>
             </LinearLayout>
 
             <!-- Commitment Section -->
@@ -238,25 +233,23 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/league_spartan_medium"
                     android:text="@string/compromisso"
                     android:textColor="#25183E"
                     android:layout_marginBottom="7dp"
-
                     android:textSize="27sp" />
 
                 <ImageView
                     android:id="@+id/three_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:contentDescription="stars icon"
-                    android:src="@drawable/three_stars_profile_card"
-                    android:layout_marginLeft="5dp"/>/>
+                    android:layout_marginStart="10dp"
+                    android:contentDescription="@string/stars_icon"
+                    android:src="@drawable/three_stars_profile_card"/>
             </LinearLayout>
 
-            <!-- Communication Section -->
+            <!-- Capacity Section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -267,22 +260,30 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/league_spartan_medium"
-                    android:text="@string/comunica_o"
+                    android:text="@string/capacidade"
                     android:textColor="#25183E"
-                    android:textSize="27sp"
-                    android:layout_marginBottom="7dp"/>
+                    android:layout_marginBottom="7dp"
+                    android:textSize="27sp" />
 
                 <ImageView
                     android:id="@+id/four_star_image"
                     android:layout_width="150dp"
                     android:layout_height="57dp"
-                    android:layout_gravity="end"
-                    android:contentDescription="stars icon"
-                    android:src="@drawable/four_stars_profile_card"
-                    android:layout_marginLeft="8dp"/>
+                    android:layout_marginStart="30dp"
+                    android:contentDescription="@string/stars_icon"
+                    android:src="@drawable/four_stars_profile_card"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <!-- FrameLayout for fragment_menu -->
+    <FrameLayout
+        android:id="@+id/fragment_menu_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/icon_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
