--- a/app/src/main/res/drawable/button_with_shadow.xml
+++ b/app/src/main/res/drawable/button_with_shadow.xml
@@ -11,7 +11,7 @@
     <item android:top="2dp" android:left="2dp">
         <!-- Button background -->
         <shape android:shape="rectangle">
-            <solid android:color="#FF6200EE"/> <!-- Button color (adjust as needed) -->
+            <solid android:color="#25183E"/> <!-- Button color (adjust as needed) -->
             <corners android:radius="12dp"/>   <!-- Rounded corners to match shadow -->
         </shape>
     </item>
