Detele of the hamburger menu icon from the profiles fragments as long as it will be in the activity_home header.

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -286,7 +286,7 @@
             android:text="@string/salvar_altera_es"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:background="@drawable/button_with_shadow"
+            android:backgroundTint="@color/button_background"
             android:textColorLink="#5E48ED53"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
